--- a/tests/Fixtures/1/alpha/vagranted.yml
+++ b/tests/Fixtures/1/alpha/vagranted.yml
@@ -6,5 +6,7 @@ context:
 templates:
   - pattern: '*.twig'
     name: '{{ basename }}.rendered'
+    exclusions:
+      - current-set.twig
 assets:
   - '*.asset'
