--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": ">= 5.6",
     "ext-json": "*",
-    "twig/twig": ">=1.0 <3.0",
+    "twig/twig": "1.33.2",
     "symfony/console": ">=2.0 <4.0",
     "symfony/yaml": ">=2.0 <4.0",
     "symfony/process": ">=2.0 <4.0",
