--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,7 +8,7 @@ build:
       version: '5.6'
   tests:
     override:
-      - command: composer test:coverage
+      - command: composer test
         coverage:
           file: tests/Report/coverage.xml
           format: php-clover
