--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,9 @@ checks:
   php:
     code_rating: true
     duplication: true
+filter:
+  excluded_paths:
+    - tests/*
 build:
   environment:
     php:
