--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ build: false
 skip_tags: true
 clone_depth: 1
 install:
-  - cinst php --version 7.0.9
+  - cinst php --version 7.0.9 --allow-empty-checksums
   - php -r "readfile('http://getcomposer.org/installer');" | php
   - php composer.phar install --no-interaction --no-progress -vvv
 
