--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ skip_tags: true
 clone_depth: 1
 install:
   - cinst php --version 7.0.9 --allow-empty-checksums
+  - SET PATH=C:\tools\php;%PATH%
   - php -r "readfile('http://getcomposer.org/installer');" | php
   - php composer.phar install --no-interaction --no-progress -vvv
 
