--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,19 @@
 build: false
 skip_tags: true
 clone_depth: 1
+clone_folder: C:\projects\vagranted
 install:
-  - cinst php --version 7.0.9 --allow-empty-checksums
-  - SET PATH=C:\tools\php;%PATH%
+  - cinst -y OpenSSL.Light
+  - SET PATH=C:\Program Files\OpenSSL;%PATH%
+  - sc config wuauserv start= auto
+  - net start wuauserv
+  - cinst -y php
+  - cd c:\tools\php
+  - copy php.ini-production php.ini
+  - echo date.timezone="UTC" >> php.ini
+  - echo extension_dir=ext >> php.ini
+  - echo extension=php_openssl.dll >> php.ini
+  - cd C:\projects\vagranted
   - php -r "readfile('http://getcomposer.org/installer');" | php
   - php composer.phar install --no-interaction --no-progress -vvv
 
