--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ install:
   - sc config wuauserv start= auto
   - net start wuauserv
   - cinst -y php --version 7.0.9 --allow-empty-checksums
+  - SET PATH=C:\tools\php;%PATH%
   - cd c:\tools\php
   - copy php.ini-production php.ini
   - echo date.timezone="UTC" >> php.ini
