--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,27 +1,47 @@
+version: '{branch}-{build}'
 build: false
-skip_tags: true
+shallow_clone: false
+platform: x64
 clone_depth: 1
-clone_folder: C:\projects\vagranted
+clone_folder: c:\projects\vagranted
+skip_tags: true
+
+environment:
+  PHP_DOWNLOAD_FILE: 'php-7.1.2-nts-Win32-VC14-x86.zip'
+  PROJECT_DIRECTORY: c:\projects\vagranted
+
+init:
+  - SET PATH=c:\php;%PATH%
+  - SET COMPOSER_NO_INTERACTION=1
+  - SET PHP=1
+  - SET ANSICON=121x90 (121x90)
+  - git config --global core.autocrlf input
+
 install:
-  - cinst -y OpenSSL.Light
-  - cinst -y curl
-  - SET PATH=C:\Program Files\OpenSSL;%PATH%
-  - sc config wuauserv start= auto
-  - net start wuauserv
-  - cinst -y php --version 7.0.9 --allow-empty-checksums
-  - SET PATH=C:\tools\php;%PATH%
-  - cd c:\tools\php
-  - copy php.ini-production php.ini
+  - IF EXIST c:\php (SET PHP=0) ELSE (mkdir c:\php)
+  - cd c:\php
+  - IF %PHP%==1 appveyor DownloadFile http://windows.php.net/downloads/releases/archives/%PHP_DOWNLOAD_FILE%
+  - IF %PHP%==1 7z x %PHP_DOWNLOAD_FILE% -y > 7z.log
+  - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
+  - appveyor DownloadFile https://getcomposer.org/composer.phar
+  - copy php.ini-production php.ini /Y
   - echo date.timezone="UTC" >> php.ini
   - echo extension_dir=ext >> php.ini
   - echo extension=php_openssl.dll >> php.ini
-  - echo extension=php_mbstring.dll >> php.ini
   - echo extension=php_curl.dll >> php.ini
-  - echo extension=php_xdebug.dll >> php.ini
-  - cd C:\projects\vagranted
-  - php -r "readfile('http://getcomposer.org/installer');" | php
-  - php composer.phar install --no-interaction --no-progress -vvv
+  - echo extension=php_mbstring.dll >> php.ini
+  - echo extension=php_fileinfo.dll >> php.ini
+    # Xdebug
+  - IF %PHP%==1 appveyor DownloadFile https://xdebug.org/files/php_xdebug-2.5.1-7.1-vc14-nts-x86_64.dll
+  - mv php_xdebug-2.5.1-7.1-vc14-nts-x86_64.dll ext\
+  - echo zend_extension="php_xdebug-2.5.1-7.1-vc14-nts-x86_64.dll" >> php.ini
+  - echo xdebug.remote_enable=true >> php.ini
+  - echo xdebug.remote_autostart=true >> php.ini
+  - cd %PROJECT_DIRECTORY%
+  - composer self-update
+  - composer install --no-progress --ansi
 
 test_script:
+  - cd %PROJECT_DIRECTORY%
   - php -m
-  - php composer.phar test
+  - composer test
