--- a/tests/Suite/System.suite.yml
+++ b/tests/Suite/System.suite.yml
@@ -4,10 +4,8 @@
 # Emulate web requests and make application process them
 # Include one of framework modules (Symfony2, Yii2, Laravel5) to use it
 
-class_name: FunctionalTester
+class_name: SystemTester
 modules:
     enabled:
         # add framework module here
-        - \Helper\Functional
-        - Cli
-        - Filesystem
+        - \Helper\System
