--- a/codeception.yml
+++ b/codeception.yml
@@ -15,6 +15,6 @@ extensions:
 coverage:
   enabled: true
   include:
-    - src/*
+    - 'src/*'
   exclude:
-    - src/Model/*
+    - 'src/Model/*'
