--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "php": ">= 5.6",
     "ext-json": "*",
     "twig/twig": ">= 1.0 <3.0",
-    "symfony/console": ">=2.0 <4.0",
+    "symfony/console": ">=2.0 <=3.2.8",
     "symfony/yaml": ">=2.0 <4.0",
     "symfony/process": ">=2.0 <4.0",
     "monolog/monolog": "^1.22",
@@ -37,7 +37,8 @@
     "kzykhys/git": "^0.1.2",
     "alchemy/zippy": "^0.4.8",
     "guzzlehttp/guzzle": "^6.2",
-    "ramsey/uuid": "^3.6"
+    "ramsey/uuid": "^3.6",
+    "ama-team/pathetic": "dev-release/0.1"
   },
   "require-dev": {
     "codeception/codeception": "^2.2",
