--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "alchemy/zippy": "^0.4.8",
     "guzzlehttp/guzzle": "^6.2",
     "ramsey/uuid": "^3.6",
-    "ama-team/pathetic": "dev-release/0.1"
+    "ama-team/pathetic": "^0.1.1"
   },
   "require-dev": {
     "codeception/codeception": "^2.2",
