--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,11 @@
       "AmaTeam\\Vagranted\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "AmaTeam\\Vagranted\\Tests\\": "tests/"
+    }
+  },
   "require": {
     "php": ">= 5.6",
     "ext-json": "*",
@@ -43,7 +48,8 @@
   "require-dev": {
     "codeception/codeception": "^2.2",
     "php-vfs/php-vfs": "^1.3",
-    "satooshi/php-coveralls": "^1.0"
+    "satooshi/php-coveralls": "^1.0",
+    "allure-framework/allure-codeception": "^1.2"
   },
   "bin": ["bin/vagranted"],
   "scripts": {
